include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_subdirectory(filter)
add_subdirectory(travel)
if(CMAKE_Fortran_COMPILER)
	#add_subdirectory(dip)
add_subdirectory(image)
add_subdirectory(velan)
add_subdirectory(model)
add_subdirectory(wei)
add_subdirectory(filter-cpp)
add_subdirectory(velan-cpp)
add_subdirectory(image-cpp)
endif(CMAKE_Fortran_COMPILER)
